// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> Should match snapshot With number 1`] = `
.Badge-module__wrapper___Owq-B {
  display: inline-block;
  margin-left: var(--qtm-spacing-xsmall);
  margin-right: var(--qtm-spacing-xsmall);
}

.Badge-module__badge___vNFzU {
  align-items: center;
  border-radius: 8px;
  box-sizing: border-box;
  display: flex;
  font-size: calc(var(--qtm-base-font-size)*.75);
  font-weight: 700;
  height: 24px;
  justify-content: center;
  line-height: 24px;
  min-width: 32px;
  padding-left: var(--qtm-spacing-xxxsmall);
  padding-right: var(--qtm-spacing-xxxsmall);
}

.Badge-module__badge-skin-neutral___J8kXp {
  background-color: var(--qtm-colors-neutral-100);
  color: var(--qtm-colors-neutral-700);
}

<div
  class="Badge-module__wrapper___Owq-B"
>
  <span
    class="Badge-module__badge___vNFzU Badge-module__badge-skin-neutral___J8kXp"
  >
    10
  </span>
</div>
`;

exports[`<Badge /> Should match snapshot it should contain dot style 1`] = `
.Badge-module__wrapper___Owq-B {
  display: inline-block;
  margin-left: var(--qtm-spacing-xsmall);
  margin-right: var(--qtm-spacing-xsmall);
}

.Badge-module__badge___vNFzU {
  align-items: center;
  border-radius: 8px;
  box-sizing: border-box;
  display: flex;
  font-size: calc(var(--qtm-base-font-size)*.75);
  font-weight: 700;
  height: 24px;
  justify-content: center;
  line-height: 24px;
  min-width: 32px;
  padding-left: var(--qtm-spacing-xxxsmall);
  padding-right: var(--qtm-spacing-xxxsmall);
}

.Badge-module__badge-dot___h5kxC {
  height: 12px;
  min-width: 12px;
  right: -2px;
  top: 0;
  width: 12px;
}

.Badge-module__badge-skin-neutral___J8kXp {
  background-color: var(--qtm-colors-neutral-100);
  color: var(--qtm-colors-neutral-700);
}

<div
  class="Badge-module__wrapper___Owq-B"
>
  <span
    class="Badge-module__badge___vNFzU Badge-module__badge-skin-neutral___J8kXp Badge-module__badge-dot___h5kxC"
  />
</div>
`;

exports[`<Badge /> Should match snapshot with children 1`] = `
.Badge-module__wrapper___Owq-B {
  display: inline-block;
  margin-left: var(--qtm-spacing-xsmall);
  margin-right: var(--qtm-spacing-xsmall);
}

.Badge-module__wrapper-content___CkcNl {
  margin-left: 0;
  margin-right: 0;
  position: relative;
}

.Badge-module__badge___vNFzU {
  align-items: center;
  border-radius: 8px;
  box-sizing: border-box;
  display: flex;
  font-size: calc(var(--qtm-base-font-size)*.75);
  font-weight: 700;
  height: 24px;
  justify-content: center;
  line-height: 24px;
  min-width: 32px;
  padding-left: var(--qtm-spacing-xxxsmall);
  padding-right: var(--qtm-spacing-xxxsmall);
}

.Badge-module__badge-content___TxPZt {
  position: absolute;
  right: -10px;
  top: -10px;
}

.Badge-module__badge-skin-neutral___J8kXp {
  background-color: var(--qtm-colors-neutral-100);
  color: var(--qtm-colors-neutral-700);
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #1250C4;
  color: #ffffff;
  border: 2px solid #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c0:hover {
  box-shadow: 0px 2px 4px -1px rgba(0,47,123,0.2),0px 4px 5px 0px rgba(0,47,123,0.14),0px 1px 10px 0px rgba(0,47,123,0.12);
  background-color: #002F7B;
  border-color: #002F7B;
}

.c0:focus,
.c0:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(18,80,196,0.2),0px 4px 5px 0px rgba(18,80,196,0.14),0px 1px 10px 0px rgba(18,80,196,0.12);
}

.c0:active {
  box-shadow: 0px 5px 5px -3px rgba(0,47,123,0.2),0px 8px 10px 1px rgba(0,47,123,0.14),0px 3px 14px 2px rgba(0,47,123,0.12);
  background-color: #002F7B;
}

<div
  class="Badge-module__wrapper___Owq-B Badge-module__wrapper-content___CkcNl"
>
  <span
    class="Badge-module__badge___vNFzU Badge-module__badge-skin-neutral___J8kXp Badge-module__badge-content___TxPZt"
  >
    10
  </span>
  <button
    class="c0"
    type="button"
  />
</div>
`;

exports[`<Badge /> Should match snapshot with skin 1`] = `
.Badge-module__wrapper___Owq-B {
  display: inline-block;
  margin-left: var(--qtm-spacing-xsmall);
  margin-right: var(--qtm-spacing-xsmall);
}

.Badge-module__badge___vNFzU {
  align-items: center;
  border-radius: 8px;
  box-sizing: border-box;
  display: flex;
  font-size: calc(var(--qtm-base-font-size)*.75);
  font-weight: 700;
  height: 24px;
  justify-content: center;
  line-height: 24px;
  min-width: 32px;
  padding-left: var(--qtm-spacing-xxxsmall);
  padding-right: var(--qtm-spacing-xxxsmall);
}

.Badge-module__badge-skin-success___lADyt {
  background-color: var(--qtm-colors-success-100);
  color: var(--qtm-colors-success-900);
}

<div
  class="Badge-module__wrapper___Owq-B"
>
  <span
    class="Badge-module__badge___vNFzU Badge-module__badge-skin-success___lADyt"
  >
    10
  </span>
</div>
`;

exports[`<Badge /> Should match snapshot with skin inverted 1`] = `
.Badge-module__wrapper___Owq-B {
  display: inline-block;
  margin-left: var(--qtm-spacing-xsmall);
  margin-right: var(--qtm-spacing-xsmall);
}

.Badge-module__badge___vNFzU {
  align-items: center;
  border-radius: 8px;
  box-sizing: border-box;
  display: flex;
  font-size: calc(var(--qtm-base-font-size)*.75);
  font-weight: 700;
  height: 24px;
  justify-content: center;
  line-height: 24px;
  min-width: 32px;
  padding-left: var(--qtm-spacing-xxxsmall);
  padding-right: var(--qtm-spacing-xxxsmall);
}

.Badge-module__badge-skin-neutral___J8kXp {
  background-color: var(--qtm-colors-neutral-100);
  color: var(--qtm-colors-neutral-700);
}

.Badge-module__badge-skin-neutral-inverted___RrIBf {
  background-color: var(--qtm-colors-neutral-700);
  color: var(--qtm-colors-neutral-100);
}

<div
  class="Badge-module__wrapper___Owq-B"
>
  <span
    class="Badge-module__badge___vNFzU Badge-module__badge-skin-neutral___J8kXp Badge-module__badge-skin-neutral-inverted___RrIBf"
  >
    10
  </span>
</div>
`;
